# btree-framework-testbench

./: .gitattributes  .gitmodules  README.md
doc/: btree programmer guide.odt  quick overview.odp
src/btreetest/: ! I just cloned this, what do I do now under linux.txt  ! I just cloned this, what do I do now under windows.txt  CMakeLists.txt  Makefile  Makefile.backup  btreetest.cpp  generate_tests.sh  recover_makefile.sh
src/btreetest/applications/avp_path_find/: avp_path_find_core.cpp  avp_path_find_core.h
src/btreetest/testbench/application_classes/regression/: btreetestarray.cpp  btreetestarray.h  btreetestkeysort.cpp  btreetestkeysort.h  btreetestmap.cpp  btreetestmap.h  btreetestmultimap.cpp  btreetestmultimap.h  btreetestmultiset.cpp  btreetestmultiset.h  btreetestset.cpp  btreetestset.h
src/btreetest/testbench/application_classes/regression/base/: btreetestbase.cpp  btreetestbase.h  btreetestbaseassociative.cpp  btreetestbaseassociative.h  btreetestbaselinear.cpp  btreetestbaselinear.h  btreetestbaseset.cpp  btreetestbaseset.h
src/btreetest/testbench/common/: btreeperftestcommon.cpp  btreeperftestcommon.h  btreetestcommon.cpp  btreetestcommon.h
src/btreetest/testbench/examples/: example_1_polymorphic_calls.cpp  example_1_polymorphic_calls.h  example_2_simple_database.cpp  example_2_simple_database.h
src/btreetest/testbench/primitives/: btreearraytestprimitive.cpp  btreearraytestprimitive.h  btreecommonprimitives.cpp  btreecommonprimitives.h  btreekeysorttestprimitive.cpp  btreekeysorttestprimitive.h  btreemultimapprimitives.cpp  btreemultimapprimitives.h  btreemultisetprimitives.cpp  btreemultisetprimitives.h  btreeprimitivedefinitions.h
src/btreetest/testbench/sub_division/: btreetestsubdivisionarray.cpp  btreetestsubdivisionarray.h  btreetestsubdivisionarrayiter.cpp  btreetestsubdivisionarrayiter.h  btreetestsubdivisionkeysort.cpp  btreetestsubdivisionkeysort.h  btreetestsubdivisionkeysortiter.cpp  btreetestsubdivisionkeysortiter.h  btreetestsubdivisionmap.cpp  btreetestsubdivisionmap.h  btreetestsubdivisionmultimap.cpp  btreetestsubdivisionmultimap.h  btreetestsubdivisionmultiset.cpp  btreetestsubdivisionmultiset.h  btreetestsubdivisionset.cpp  btreetestsubdivisionset.h
src/btreetest/testbench/tests/performance/: btreearrayperftestbench.cpp  btreearrayperftestbench.h  btreemultimapperftestbench.cpp  btreemultimapperftestbench.h
src/btreetest/testbench/tests/regression/: btreearrayitertestbench.cpp  btreearrayitertestbench.h  btreearraytestbench.cpp  btreearraytestbench.h  btreekeysortitertestbench.cpp  btreekeysortitertestbench.h  btreekeysorttestbench.cpp  btreekeysorttestbench.h  btreemaptestbench.cpp  btreemaptestbench.h  btreemultimaptestbench.cpp  btreemultimaptestbench.h  btreemultisettestbench.cpp  btreemultisettestbench.h  btreesettestbench.cpp  btreesettestbench.h
src/btreetest/testbench/wrapper_classes/: btreearraytestwrapper.cpp  btreearraytestwrapper.h  btreekeysorttestwrapper.cpp  btreekeysorttestwrapper.h  btreemaptestwrapper.cpp  btreemaptestwrapper.h  btreemultimaptestwrapper.cpp  btreemultimaptestwrapper.h  btreemultisettestwrapper.cpp  btreemultisettestwrapper.h  btreesettestwrapper.cpp  btreesettestwrapper.h
src/btreetest/testbench/wrapper_classes/base/: btreeassociativetestwrapper.cpp  btreeassociativetestwrapper.h
src/btreetest/tests/code_coverage/containers_tests/array/0_functionality/19_move_constructor_and_move_assignment/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/array/1000_STL_interface/1012_emplace/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/array/1000_STL_interface/1013_emplace_back/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/0_functionality/21_move_constructor_and_move_assignment/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1009_emplace_hint/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1010_emplace_hint_minor/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1015_insert_hint_significant/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1015_insert_hint_significant/sizetype_uint64/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1017_emplace_via_ctor/sizetype_uint32/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1017_emplace_via_ctor/sizetype_uint64/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1018_emplace_hint_via_ctor/sizetype_uint64/: cmdline.txt
src/btreetest/tests/code_coverage/containers_tests/keysort/1000_STL_interface/1019_equal_range/sizetype_uint64/: cmdline.txt
src/btreetest/tests/regression/containers_tests/array/1000_STL_interface/1013_emplace_back/sizetype_uint64/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1008_emplace/sizetype_uint32/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1008_emplace/sizetype_uint64/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1009_emplace_hint/sizetype_uint64/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1010_emplace_hint_minor/sizetype_uint64/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1011_emplace_hint_significant/sizetype_uint32/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1011_emplace_hint_significant/sizetype_uint64/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1012_emplace_hint_large/sizetype_uint32/: cmdline.txt
src/btreetest/tests/regression/containers_tests/keysort/1000_STL_interface/1012_emplace_hint_large/sizetype_uint64/: cmdline.txt
(+115 files in other folders)
